--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 show_downloads: false
 title: СНГ Minecraft
-description: Объединение всех Minecraft СНГ сообществ.
+description: Объединение сообществ по разным темам.
